<resources>
    <string name="app_name">AlkeWallet</string>
    <string name="slogan_singup">El lugar mas seguro para tu dinero</string>
    <string name="btn_crearcuenta">Crear cuenta nueva</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="loguea">Loguea y empieza a \ntransferir! </string>
    <string name="correo">Ingresa tu email</string>
    <string name="mail">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="clave">Ingresa tu contraseña</string>
    <string name="letralogo">Alke Wallet</string>
    <string name="olvidastecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="login">Login</string>
    <string name="nuevacuenta">Crea una nueva Cuenta</string>
    <string name="Registrate">Registrate y \nempieza a transferir </string>
    <string name="nombre">Ingresar nombre</string>
    <string name="name">Nombre</string>
    <string name="apellido">Ingresar apellido</string>
    <string name="reingresaclave">Reingresar contraseña</string>
    <string name="lastname">Apellido</string>
    <string name="reingresaclave2">Reingresa tu contraseña</string>
    <string name="btn_crearnuevacuenta">Crear Cuenta</string>
    <string name="yatienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="inicio_homePage">Inicio</string>
    <string name="Saludo">Hola, Amanda!</string>
    <string name="Balance">Balance Total</string>
    <string name="Saldo">$124.57</string>
    <string name="Enviar">Enviar Dinero</string>
    <string name="Depositar">Ingresar Dinero</string>
    <string name="nombre1">Yaha Khalil</string>
    <string name="nombre2">Sara Ibrahim</string>
    <string name="nombre3">Ahmad Ibrahim</string>
    <string name="nombre4">Reem Khaled</string>
    <string name="nombre5">Hiba Saleh</string>
    <string name="date1">Oct 14, 10:24 AM</string>
    <string name="date2">Oct 12, 02:13 PM</string>
    <string name="date3">Oct 11, 01:19 AM</string>
    <string name="date4">Oct 07, 09:10 PM</string>
    <string name="date5">Oct 04, 05:45 AM</string>
    <string name="mov1">-$15.00</string>
    <string name="mov2">+$20.50</string>
    <string name="mov3">+$12.40</string>
    <string name="mov4">-$21.30</string>
    <string name="mov5">+$09.00</string>
    <string name="nomov">No hay transacciones registradas!</string>
    <string name="ultimosmov">Ultimas transacciones</string>
    <string name="ingdinero">Ingresar Dinero</string>
    <string name="mov">20.00 |</string>
    <string name="cantidIng">Cantidad a ingresar</string>
    <string name="nota">Notas de transferencia</string>
    <string name="nota2">Agregar nota de transferencia (opcional)</string>
    <string name="retdinero">Retirar Dinero</string>
    <string name="ret">12.50 |</string>
    <string name="cantidTrans">Cantidad a transferir</string>
    <string name="profile">Mi perfil</string>
    <string name="nameprofile">Amanda Alkemy</string>
    <string name="btn1">Mi informacion</string>
    <string name="btn2">Mis tarjetas</string>
    <string name="btn3">Opciones</string>
    <string name="btn4">Centro de ayuda</string>

</resources>