<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background__1_"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/jua"
        android:text="@string/loguea"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/txtInputmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:textColorHint="false"
        app:boxBackgroundColor="@color/blanco"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_ing_mail"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:fontFamily="@font/jua"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/material_dynamic_neutral80"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutclave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:textColorHint="false"
        app:boxBackgroundColor="@color/blanco"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:fontFamily="@font/jua"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:textColor="@color/material_dynamic_neutral80"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:fontFamily="@font/jua"
        android:text="@string/mail"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtInputmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/jua"
        android:text="@string/contraseña"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputmail"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/txt_olvidasteClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/olvidastecontraseña"
        android:textColor="@color/azul_txt"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/boton"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:backgroundTint="#63B8FC"
        android:fontFamily="@font/jua"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutclave"
        app:layout_constraintVertical_bias="0.667" />

    <TextView
        android:id="@+id/txtcreaNuevaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/jua"
        android:text="@string/nuevacuenta"
        android:textColor="@color/azul_txt"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>